# pipeline_dados_fauna

./: .gitignore  README.md  pyproject.toml
api/: alembic.ini  env-EXEMPLE  main.py
api/alembic/: env.py
api/alembic/versions/: 37e88bdfa227_baseline.py
api/infra_db/: database.py
api/models/: autorizacoes.py
api/routers/: autorizacoes.py
api/schemas/: autorizacao.py  payload.py
api/security/: api_key.py
scraper/: fauna_db.py  sia_scraper.py
